[build-system]
requires = ["scikit-build-core", "setuptools>=64.0"]
build-backend = "scikit_build_core.build"

[project]
name = "nexaai"
dynamic = ["version"]
description = "Nexa AI SDK"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nexa AI", email = "octopus@nexa4ai.com" }]
dependencies = [
    "cmake", # For building C++ extensions
    "faster_whisper",
    "typing-extensions>=4.5.0", # For ggml
    "numpy>=1.20.0",
    "diskcache>=5.6.1",
    "jinja2>=2.11.3",
    "librosa>=0.8.0",
    "fastapi",
    "uvicorn",
    "pydantic",
    "pillow",
    "huggingface_hub",
    "prompt_toolkit",
    "tqdm",                     # Shared dependencies
    "tabulate",
    "streamlit>=1.37.1",
    "streamlit-audiorec",
    "python-multipart",
    "cmake"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/NexaAI/Nexa-SDK-Enterprise"

[project.scripts]
nexa-cli = "nexa.cli.entry:main"
nexa = "nexa.cli.entry:main"
nexaai = "nexa.cli.entry:main"
nexai = "nexa.cli.entry:main"

[tool.scikit-build]
wheel.packages = [
    "nexa",
    "nexa.cli",
    "nexa.gguf",
    "nexa.gguf.llama"
]
sdist.include = [
    "CMakeLists.txt",
    "dependency/llama.cpp/*"
]
sdist.exclude = [
    ".github",
    "build",
    "dist",
    "nexa.egg-info",
    "dependency/llama.cpp/build"
]
build.verbose = true
cmake.build-type = "Release"
cmake.version = ">=3.16"
cmake.args = [
    "-DCMAKE_BUILD_PARALLEL_LEVEL=16",
    "-DLLAMA_BUILD=ON"
]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "nexa/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]